remove experimental settings
git-svn-id: https://secure.diverse.org.ru/jonny/svn/util/trunk/TeamCity.Downloader@137 5c360b9f-cb11-f648-b5e7-fb5e491e6b3d